# bizix-blockchain-node

./: .gitignore  Cargo.toml  Containerfile  README.md  bizix-node.config.js  tree
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: release.yml
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/bizix/: Cargo.toml
pallets/bizix/rpc/src/: lib.rs
pallets/bizix/src/: benchmarking.rs  lib.rs  weights.rs
pallets/company_registry/: Cargo.toml
pallets/company_registry/rpc/: Cargo.toml
pallets/company_registry/rpc/runtime-api/: Cargo.toml
pallets/company_registry/rpc/runtime-api/src/: lib.rs
pallets/company_registry/rpc/src/: lib.rs
pallets/company_registry/src/: lib.rs  mock.rs  weights.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
